クリックされたら画像を消す処理 途中

--- a/display_picture/Cargo.toml
+++ b/display_picture/Cargo.toml
@@ -16,7 +16,9 @@ features = [
   'Window',
   'Document',
   'Element',
-  'HtmlElement'
+  'HtmlElement',
+  'Event',
+  'HtmlImageElement'
 ]
 
 [dev-dependencies]
