クリックされたら画像を消す処理 一旦完成

--- a/display_picture/Cargo.toml
+++ b/display_picture/Cargo.toml
@@ -18,7 +18,8 @@ features = [
   'Element',
   'HtmlElement',
   'Event',
-  'HtmlImageElement'
+  'HtmlImageElement',
+  'console',
 ]
 
 [dev-dependencies]
