--- a/display_picture/package.json
+++ b/display_picture/package.json
@@ -2,7 +2,8 @@
   "name": "display_picture",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "exports": "./pkg/display_picture.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf dist pkg && webpack /pkg/display_picture.js",
