--- a/display_picture/Cargo.toml
+++ b/display_picture/Cargo.toml
@@ -14,6 +14,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 lazy_static = "1.4"
 wasm-bindgen-futures = "0.4.5"
+once_cell = "1.17"
+serde-wasm-bindgen = "0.2"
 
 [dependencies.web-sys]
 version = "0.3.57"
