--- a/display_picture/Cargo.toml
+++ b/display_picture/Cargo.toml
@@ -16,6 +16,8 @@ lazy_static = "1.4"
 wasm-bindgen-futures = "0.4.5"
 once_cell = "1.17"
 serde-wasm-bindgen = "0.2"
+rand = "0.8"
+getrandom = { version = "0.2", features = ["js"] }
 
 [dependencies.web-sys]
 version = "0.3.57"
